base/applications/paybridge-user-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paybridge-user-svc
  namespace: paybridge
spec:
  selector:
    app: paybridge-user-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
