base/applications/paybridge-user-svc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybridge-user-svc
  namespace: paybridge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: user.paybridge.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paybridge-user-svc
                port:
                  number: 8080
